same minor changes

--- a/project/package.json
+++ b/project/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sweproject-dev",
+  "name": "iwpproject-dev",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://localhost:4500",
