--- a/project/server/package.json
+++ b/project/server/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "swe",
+  "name": "iwp",
   "version": "1.0.0",
   "description": "A task management and scheduling system",
   "main": "app.js",
