made minor changes

--- a/project/public/manifest.json
+++ b/project/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Task Management and Scheduling Software ",
-  "name": "Task Management and Scheduling System for SWE Project",
+  "short_name": "Project Management and Scheduling Software ",
+  "name": "Project Management and Scheduling System for IWP Project",
   "icons": [
     {
       "src": "favicon.ico",
